# due-diligence-intelligence

./: README.md
company-due-diligence/: .gitignore  README.md  SKILL.md  pyproject.toml
company-due-diligence/cdd/: __init__.py  artifacts.py  canonicalize.py  changelog.py  diff.py  exporters.py  hashing.py  ids.py  inventory.py  locking.py  manifest.py  merge.py  paths.py  publish.py  registry.py  runlifecycle.py  schema.py  timeutil.py  validation.py
company-due-diligence/examples/: example_artifact_registry.jsonl  example_input.md  example_output_structure.md  example_run_manifest.json  example_source_registry.jsonl
company-due-diligence/prompts/: corporate_structure_extraction.md  dossier_generation.md  event_extraction.md  evidence_extraction.md  evidence_validation.md  financial_extraction.md  market_intelligence.md  product_extraction.md  research_orchestrator.md  risk_extraction.md  run_comparison.md  sanctions_screening.md  source_discovery.md  source_retrieval.md
company-due-diligence/references/: anti_hallucination_rules.md  data_quality_rules.md  financial_extraction_rules.md  legal_and_tos.md  open_data_sources.md  product_extraction_rules.md  provenance_and_reproducibility.md  research_methodology.md  sanctions_screening_rules.md  source_priority_rules.md
company-due-diligence/schemas/: artifact_registry.schema.json  company_dossier.schema.json  data_quality_report.schema.json  extracted_artifact.schema.json  financial_artifact.schema.json  product_artifact.schema.json  run_manifest.schema.json  source_inventory.schema.json  (+1 more)
(+71 files in other folders)
