[project]
name = "company-due-diligence"
version = "0.1.0"
description = "Deterministic engine for the company-due-diligence Claude Code skill"
requires-python = ">=3.12"
dependencies = []

[project.optional-dependencies]
validate = ["jsonschema>=4.21"]
extract = [
  "httpx>=0.27",
  "trafilatura>=1.8",
  "beautifulsoup4>=4.12",
  "lxml>=5.2",
  "pdfplumber>=0.11",
  "pymupdf>=1.24",
  "edgartools>=2.27",
  "defusedxml>=0.7",
]
dev = ["pytest>=8.2", "pytest-cov>=5.0", "ruff>=0.5", "pyright>=1.1", "jsonschema>=4.21"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
pythonpath = ["."]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.setuptools.packages.find]
include = ["cdd*"]

[tool.pyright]
include = ["cdd", "scripts"]
typeCheckingMode = "strict"
